--- a/index_ch.html
+++ b/index_ch.html
@@ -33,7 +33,7 @@ var _hmt = _hmt || [];
 <meta name="apple-mobile-web-app-status-bar-style" content="#263959">
 <!-- Styles -->
 <link rel="stylesheet" href="./css/main.css">
-<link rel="shortcut icon" href="./xbliu.ico"  />
+<link rel="shortcut icon" href="./jiguo.ico"  />
 </head>
 
 <body>
