add work experience section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ var _hmt = _hmt || [];
 	      <div class="author-name">Jiguo Li</div>
 	      <p>I received the B.E. degree from <a href="https://www.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2016. I am currently a Ph.D. student of <a href="http://www.ict.ac.cn/">Institute of Computing Technology, Chinese Academy of Science</a>. I am a visiting student in <a href="http://idm.pku.edu.cn/">National Engineer Lab for Video Technology</a> of Peking University, under the supervision by <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof. Wen Gao</a> and <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">Prof. Siwei Ma</a> . My research interests include image generation, cross media analysis, and virtual reality.</p>
 	      <br>
-	      <p style="margin-top: -15pt" >[<a href="paper/xiaobin_cv.pdf">CV</a>] 
+	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">CV</a>] 
 	      [<a href="#news">News</a>]  
+        [<a href="#works">Work Experience</a>]  
 	      [<a href="#pub">Publications</a>] 
 	      </p>
 	      <p style="margin-top: -5pt" >
@@ -110,6 +111,12 @@ var _hmt = _hmt || [];
       <li style="margin: -10px 0px 0px 5px" >2021.06, one paper on adversarial attack for voice recognition is accepted by <strong>ACM TOMM</strong>.</li>
 
 
+    </div>
+
+    <div id="content-title" style="margin-top: 15px">
+      <span class="border"></span>
+      <span><h2><a name="works">Work Experience</a></h2></span>
+      <span class="border"></span>
     </div>
 
     <div id="content-title" style="margin-top: 15px">
