--- a/index_ch.html
+++ b/index_ch.html
@@ -48,8 +48,9 @@ var _hmt = _hmt || [];
 	      <div class="author-name">黎吉国</div>
 	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 目前我在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。我的研究方向为人工智能与多媒体，研究兴趣包括图像生成, 跨媒体分析, 虚拟现实等。</p>
 	      <br>
-	      <p style="margin-top: -15pt" >[<a href="paper/xiaobin_cv.pdf">简历</a>] 
+	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">简历</a>] 
 	      [<a href="#news">新闻</a>]  
+        [<a href="#works">工作经历</a>]  
 	      [<a href="#pub">论文</a>] 
 	      </p>
 	      <p style="margin-top: -5pt" >
@@ -110,7 +111,11 @@ var _hmt = _hmt || [];
       <li style="margin: -10px 0px 0px 5px" >2021.06, 一篇关于声纹识别对抗攻击的论文被<strong>ACM TOMM</strong>接收。</li>
 
     </div>
-
+    <div id="content-title" style="margin-top: 15px">
+      <span class="border"></span>
+      <span><h2><a name="works">工作经历</a></h2></span>
+      <span class="border"></span>
+    </div>
     <div id="content-title" style="margin-top: 15px">
       <span class="border"></span>
       <span><h2><a name="pub">论文</a></h2></span>
