--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ var _hmt = _hmt || [];
         <a href="http://www.jiachuanmin.site/">Dr.&nbsp;Chuanmin&nbsp;Jia</a>,&nbsp; &nbsp;
         <a href="http://people.ucas.ac.cn/~csxfzhang">Prof.&nbsp;Xinfeng&nbsp;Zhang</a>,&nbsp; &nbsp;
         <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Prof.&nbsp;Shiqi&nbsp;Wang</a>,&nbsp; &nbsp;
-        <a href="https://eecs.pku.edu.cn/info/1339/6076.htm">Prof..&nbsp;Siwei&nbsp;Ma</a>,&nbsp; &nbsp;
+        <a href="https://eecs.pku.edu.cn/info/1339/6076.htm">Prof.&nbsp;Siwei&nbsp;Ma</a>,&nbsp; &nbsp;
         <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof.&nbsp;Wen&nbsp;Gao</a>, &nbsp; &nbsp; 
         <a href="https://scholar.google.com/citations?user=x4iWZ7wAAAAJ&hl=en">Dr.&nbsp;Jizheng&nbsp;Xu</a>,&nbsp; &nbsp;
         <a href="https://scholar.google.com/citations?user=RQD_dqYAAAAJ&hl=en&oi=ao">Dr.&nbsp;Shu&nbsp;Shi</a>,&nbsp; &nbsp;        
