--- a/index.html
+++ b/index.html
@@ -296,14 +296,26 @@ var _hmt = _hmt || [];
       </p>
     </div>
 
-
-    <div id = "logo" style="margin-top: 10px">
-    <a href="http://www.pku.edu.cn"><img  src="img/pku.png" height="65px" /></a>
-    <a href="http://www.ict.ac.cn"><img  src="img/ICT.jpg" height="65px" style="margin-left: 50px"/></a>
-    <a href="http://www.ucas.edu.cn"><img  src="img/UCAS.jpg" height="65px" style="margin-left: 50px"/></a>
-    <a href="http://www.hust.edu.cn"><img  src="img/HUST.jpg" height="65px" style="margin-left: 50px" /></a>
+<table width=90% border="0" align="center" id = "logo" style="margin-top: 10px">
+  <tbody>
+    <tr>
+      <td align='center'>
+        <a href="http://www.pku.edu.cn"><img  src="img/pku.png" height="65px" /></a>
+      </td>
+      <td align='center'>
+        <a href="http://www.ict.ac.cn"><img  src="img/ICT.jpg" height="65px"/></a>
+      </td>
+      <td align='center'>
+        <a href="http://www.ucas.edu.cn"><img  src="img/UCAS.jpg" height="65px" /></a>
+      </td>
+      <td align='center'>
+        <a href="http://www.hust.edu.cn"><img  src="img/HUST.jpg" height="65px" /></a>
+      </td>
+    </tr>
+  </tbody>
+  
+</table>
     
-    </div>
   </div>
 
 </body></html>
