--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2021.06, one paper on adversarial attack for voice recognition is accepted by <strong>ACM TOMM</strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" >2021.07, one paper on cross modal compression is accepted by <strong>ACM MM 2021</strong>.</li>
+    
+      <li style="margin: 10px 0px 0px 5px" >2021.06, one paper on adversarial attack for voice recognition is accepted by <strong>ACM TOMM</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2020.11, the opening report is completed。</li>
       <li style="margin: 10px 0px 0px 5px" >2020.06, one paper on speech-to-image translation is accepted by <strong>IEEE JSTSP</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2020.03, one paper on adversarial attack to voice recognition is accepted ny <strong>IEEE ICME 2020</strong>.</li>
@@ -296,7 +298,12 @@ var _hmt = _hmt || [];
       </p>
     </div>
 
-<table width=90% border="0" align="center" id = "logo" style="margin-top: 10px">
+    <style>
+      table,table tr th, table tr td { border:0px solid #FFFFFF; }
+      table { width: 200px; min-height: 25px; line-height: 25px; text-align: center; border-collapse: collapse; padding:2px; background: #FFFFFF;}   
+  </style>
+
+<table width=90% border="0" align="center" id = "logo" style="margin-top: 10px;">
   <tbody>
     <tr>
       <td align='center'>
