update the news and papers

--- a/index_ch.html
+++ b/index_ch.html
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 	        <a href="img/jiguo.png"><img src="img/jiguo.png" alt="Jiguo Li"></a>
 	      </div>
 	      <div class="author-name">黎吉国</div>
-	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 目前我在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。我的研究方向为人工智能与多媒体，研究兴趣包括图像生成, 跨媒体分析, 虚拟现实等。</p>
+	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 2016-2022年在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。2022年取得博士学位后加入复旦大学担任博士后研究员，合作导师为<a href="http://www.it.fudan.edu.cn/En/Data/View/1799">郑立荣</a>教授。我的研究方向为人工智能与多媒体，研究兴趣包括机器人感知与决策，图像生成, 跨媒体分析, 虚拟现实等。</p>
 	      <br>
 	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">简历</a>] 
 	      [<a href="#news">新闻</a>]  
@@ -66,10 +66,10 @@ var _hmt = _hmt || [];
       	<h3 class="contact-title"  style="margin-top: -15pt" >联系方式</h3>
       	<ul>
     			<font size="2" ><strong>邮箱:</strong></font>
-    			<font size="2">jgli AT pku.edu.cn, jiguo.li AT vipl.ict.ac.cn</font>
+    			<font size="2">jgli AT fudan.edu.cn, jgli AT lailotech.com</font>
         	<br>
         	<font size = "2"><strong>地址:</strong> </font>
-          <font size="2">北京市海淀区北京大学燕园大厦517</font>
+          <font size="2">上海市宝山区长江路580号不锈钢大厦601</font>
     		</ul>
     	</section>
       <div style="text-align: center">
@@ -108,7 +108,9 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2021.07, 一篇关于跨模态压缩的论文被<strong>ACM MM 2021</strong>接收。</li>
+      <li style="margin: -10px 0px 0px 5px" >2022.07, 加入复旦大学担任博士后研究员。</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.06, 取得博士学位。</li>
+      <li style="margin: 10px 0px 0px 5px" >2021.07, 一篇关于跨模态压缩的论文被<strong>ACM MM 2021</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2021.06, 一篇关于声纹识别对抗攻击的论文被<strong>ACM TOMM</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2020.11, 完成博士开题答辩。</li>
       <li style="margin: 10px 0px 0px 5px" >2020.06, 一篇关于语音到图像生成的论文被<strong>IEEE JSTSP</strong>接收。</li>
@@ -125,6 +127,7 @@ var _hmt = _hmt || [];
     </div>
 
     <div id = "news-content">
+      <li style="margin: 10px 0px 0px 0px" >2022.07-至今, 莱陆科技 CTO</li>
       <li style="margin: 10px 0px 0px 0px" >2018.09-2020.09, 字节跳动 研发实习生</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, 维境视讯 图像算法实习生</li>
     </div>
@@ -135,6 +138,8 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
+      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, "Consistency-Contrast Learning for Conceptual Coding." Proceedings of the 30th ACM International Conference on Multimedia. 2022. (Accepted, ACM MM, EI, CCF A)</li>
+
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Jia Chuanmin, Xu Jizheng, Zhang Li, Wang Yue, Ma Siwei, Gao Wen. Direct speech-to-image translation[J]. IEEE Journal of Selected Topics in Signal Processing(JSTSP), 2020, 14(3): 517-529. (Published, SCI, IF 4.981, 一作, <a href="https://smallflyingpig.github.io/speech-to-image/main">Homepage</a>)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Xu Jizheng, Ma Siwei, Gao Wen. Learning to Fool the Speaker Recognition[J]. ACM Transactions on Multimedia Computing, Communications, and Applications(TOMM). (Accepted, ACM TOMM, CCF B, SCI, IF 3.275, 一作, <a href="https://smallflyingpig.github.io/speaker-recognition-attacker/main">Homepage</a>)</li>
@@ -263,11 +268,14 @@ var _hmt = _hmt || [];
       <p style="margin-top: -10px">
 	<li style="margin: -10px 0px 0px 5px" >2017.10, 第17届中国虚拟现实大会最佳论文奖。</li>
 	<li style="margin: 10px 0px 0px 5px" >2017.12, 2017年AVS产业创新奖。</li>
+  <li style="margin: 10px 0px 0px 5px" >2015.10, 国家奖学金。</li>
+
 
       <h4>社会服务</h4>
-        <li style="margin: -10px 0px 0px 5px" >我是以下期刊或会议的审稿人： 
+        <li style="margin: -10px 0px 0px 5px" >受邀担任以下期刊或会议的审稿人： 
 	  <ol style="margin: 0px 0px 0px 0px" >
             <li>IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT),</li>
+            <li>ICME 2022,</li>
             <li>ICME 2021,</li>
             <li>ICME 2020,</li>
           </ol>
@@ -307,6 +315,9 @@ var _hmt = _hmt || [];
 <table width=90% border="0" align="center" id = "logo" style="margin-top: 10px;">
   <tbody>
     <tr>
+      <td align='center'>
+        <a href="http://www.fudan.edu.cn"><img  src="img/fudan.jfif" height="65px" /></a>
+      </td>
       <td align='center'>
         <a href="http://www.pku.edu.cn"><img  src="img/pku.png" height="65px" /></a>
       </td>
