--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 	        <a href="img/jiguo.png"><img src="img/jiguo.png" alt="Jiguo Li"></a>
 	      </div>
 	      <div class="author-name">Jiguo Li</div>
-	      <p>I received the B.E. degree from <a href="https://www.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2016. I am currently a Ph.D. student of <a href="http://www.ict.ac.cn/">Institute of Computing Technology, Chinese Academy of Science</a>. I am a visiting student in <a href="http://idm.pku.edu.cn/">National Engineer Lab for Video Technology</a> of Peking University, under the supervision by <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof. Wen Gao</a> and <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">Prof. Siwei Ma</a> . My research interests include image generation, cross media analysis, and virtual reality.</p>
+	      <p>I received the B.E. degree from <a href="https://www.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2016. I earned the Ph.D. in <a href="http://www.ict.ac.cn/">Institute of Computing Technology, Chinese Academy of Science</a> in 2022, under the supervision by <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof. Wen Gao</a> and <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">Prof. Siwei Ma</a> . Now I am a post-doctor researcher in <a href="http://cmns.fudan.edu.cn/">Micro nano system center</a>, Fudan university. My co-supervisor is <a href="https://scholar.google.com/citations?user=E2rhFPIAAAAJ&hl=zh-CN">Prof. Lirong Zheng</a>. My research interests include perception and decision of robot, image generation, cross media analysis, and virtual reality.</p>
 	      <br>
 	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">CV</a>] 
 	      [<a href="#news">News</a>]  
@@ -66,10 +66,10 @@ var _hmt = _hmt || [];
       	<h3 class="contact-title"  style="margin-top: -15pt" >Contact me</h3>
       	<ul>
     			<font size="2" ><strong>Email:</strong></font>
-    			<font size="2">jgli AT pku.edu.cn, jiguo.li AT vipl.ict.ac.cn</font>
+    			<font size="2">jgli AT fuda.edu.cn, jiguo.li AT vipl.ict.ac.cn</font>
         	<br>
         	<font size = "2"><strong>Adress:</strong> </font>
-          <font size="2">Room 517, Yanyuan Building, Peking University, Beijing</font>
+          <font size="2">Room 601, Stainless steel building, No. 580, Changjiang Road, Shanghai</font>
     		</ul>
     	</section>
       <div style="text-align: center">
@@ -126,7 +126,7 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 20px 0px 0px" >2022.07-, CTO in <a href="https://lailotech.com/">Lailo Technology</a>.</li>
+      <li style="margin: -10px 20px 0px 0px" >2022.07-Now, CTO in <a href="https://lailotech.com/">Lailo Technology</a>.</li>
       <li style="margin: 10px 20px 0px 0px" >2018.09-2020.09, research intern in Bytedance.Inc</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, part-time intern on image processing in VSCENE.</li>
     </div>
@@ -289,12 +289,13 @@ var _hmt = _hmt || [];
     <p style="margin-top: -10px">
 
 	<a href="https://scholar.google.com/citations?user=VTQZF6EAAAAJ&hl=zh-CN&oi=ao">Dr.&nbsp;Qi&nbsp;Mao</a>,&nbsp; &nbsp;
-        <a href="https://liu-xb.github.io/index_ch.html">Xiaobin&nbsp;Liu</a>,&nbsp; &nbsp;
+        <a href="https://liu-xb.github.io/index_ch.html">Dr.&nbsp;Xiaobin&nbsp;Liu</a>,&nbsp; &nbsp;
         <a href="https://lotayou.github.io/resume.pdf">Dr.&nbsp;Lingbo&nbsp;Yang</a>,&nbsp; &nbsp;
         <a href="http://vipl.ict.ac.cn/view_people.php?id=69">Dr.&nbsp;Xuesong&nbsp;Niu</a>,&nbsp; &nbsp;
         <a href="http://www.jiachuanmin.site/">Dr.&nbsp;Chuanmin&nbsp;Jia</a>,&nbsp; &nbsp;
         <a href="http://people.ucas.ac.cn/~csxfzhang">Prof.&nbsp;Xinfeng&nbsp;Zhang</a>,&nbsp; &nbsp;
         <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Prof.&nbsp;Shiqi&nbsp;Wang</a>,&nbsp; &nbsp;
+        <a href="https://scholar.google.com/citations?user=E2rhFPIAAAAJ&hl=zh-CN">Prof.&nbsp;Lirong&nbsp;Zheng</a>,&nbsp; &nbsp;
         <a href="https://eecs.pku.edu.cn/info/1339/6076.htm">Prof.&nbsp;Siwei&nbsp;Ma</a>,&nbsp; &nbsp;
         <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof.&nbsp;Wen&nbsp;Gao</a>, &nbsp; &nbsp; 
         <a href="https://scholar.google.com/citations?user=x4iWZ7wAAAAJ&hl=en">Dr.&nbsp;Jizheng&nbsp;Xu</a>,&nbsp; &nbsp;
