--- a/index_ch.html
+++ b/index_ch.html
@@ -294,6 +294,7 @@ var _hmt = _hmt || [];
   <a href="http://www.jiachuanmin.site/">贾川民博士</a>,&nbsp; &nbsp;
   <a href="http://people.ucas.ac.cn/~csxfzhang">张新峰博士</a>,&nbsp; &nbsp;
   <a href="https://www.cs.cityu.edu.hk/~shiqwang/">王诗淇博士</a>,&nbsp; &nbsp;
+  <a href="https://scholar.google.com/citations?user=E2rhFPIAAAAJ&hl=zh-CN">郑立荣教授</a>,&nbsp; &nbsp;
   <a href="https://eecs.pku.edu.cn/info/1339/6076.htm">马思伟教授</a>,&nbsp; &nbsp;
   <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文教授</a>, &nbsp; &nbsp; 
   <a href="https://scholar.google.com/citations?user=x4iWZ7wAAAAJ&hl=en">许继征博士</a>,&nbsp; &nbsp;
