--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, "Consistency-Contrast Learning for Conceptual Coding." Proceedings of the 30th ACM International Conference on Multimedia. 2022. (Accepted, ACM MM, EI, CCF A)</li>
+      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
 
-      <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Jia Chuanmin, Xu Jizheng, Zhang Li, Wang Yue, Ma Siwei, Gao Wen. Direct speech-to-image translation[J]. IEEE Journal of Selected Topics in Signal Processing(JSTSP), 2020, 14(3): 517-529. (Published, SCI, IF 4.981, First Author, <a href="https://smallflyingpig.github.io/speech-to-image/main">Homepage</a>)</li>
+      <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Jia Chuanmin, Zhang Xinfeng, Ma Siwei, Gao Wen. Cross Modal Compression: Towards Human-comprehensible Semantic Compression[C]//Proceedings of the 29th ACM International Conference on Multimedia(ACM MM). 2021: 4230-4238. (Published, EI, CCF A, First Author)</li>
+
+      <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Jia Chuanmin, Xu Jizheng, Zhang Li, Wang Yue, Ma Siwei, Gao Wen. Direct speech-to-image translation[J]. IEEE Journal of Selected Topics in Signal Processing(JSTSP), 2020, 14(3): 517-529. (Published, SCI, IF 7.695, First Author, <a href="https://smallflyingpig.github.io/speech-to-image/main">Homepage</a>)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Xu Jizheng, Ma Siwei, Gao Wen. Learning to Fool the Speaker Recognition[J]. ACM Transactions on Multimedia Computing, Communications, and Applications(TOMM). (Published, ACM TOMM, CCF B, SCI, IF 3.275, First Author, <a href="https://smallflyingpig.github.io/speaker-recognition-attacker/main">Homepage</a>)</li>
 
