add work experience

--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 20px 0px 0px" >2022.07-Now, CTO in <a href="https://lailotech.com/">Lailo Technology</a>.</li>
-      <li style="margin: 10px 20px 0px 0px" >2018.09-2020.09, research intern in Bytedance.Inc</li>
+      <li style="margin: -10px 20px 0px 0px" >2022.07-Now, CTO in <a href="https://lailotech.com/">Lailo Technology</a></li>
+      <li style="margin: -10px 20px 0px 0px" >2022.03-2022.06, research intern on search&recommendation algorithm in JD.inc</li>
+      <li style="margin: 10px 20px 0px 0px" >2018.09-2020.09, research intern on multimedia processing in Bytedance.Inc</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, part-time intern on image processing in VSCENE.</li>
     </div>
 
