--- a/index_ch.html
+++ b/index_ch.html
@@ -116,8 +116,11 @@ var _hmt = _hmt || [];
       <li style="margin: 10px 0px 0px 5px" >2020.06, 一篇关于语音到图像生成的论文被<strong>IEEE JSTSP</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2020.03, 一篇关于声纹识别对抗攻击的论文被<strong>IEEE ICME 2020</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2020.03, 一篇关于声纹识别对抗攻击的论文被<strong>IEEE ICASSP 2020</strong>接收。</li>
-
-
+      <li style="margin: 10px 0px 0px 5px" >2018.12, 参与的创业公司“维境视讯”被字节跳动收购，进入字节跳动实习。</li>
+      <li style="margin: 10px 0px 0px 5px" >2018.11, 一篇关于视频拼接的论文被<strong>中国科学：信息科学</strong>接收。</li>
+      <li style="margin: 10px 0px 0px 5px" >2018.04, 获得AVS产业创新奖。</li>
+      <li style="margin: 10px 0px 0px 5px" >2017.07, 获得第17届中国虚拟现实大会最佳论文奖。</li>
+      <li style="margin: 10px 0px 0px 5px" >2016.06, 取得学士学位。</li>
 
     </div>
     <div id="content-title" style="margin-top: 15px">
@@ -128,8 +131,9 @@ var _hmt = _hmt || [];
 
     <div id = "news-content">
       <li style="margin: 10px 0px 0px 0px" >2022.07-至今, 莱陆科技 CTO</li>
-      <li style="margin: 10px 0px 0px 0px" >2018.09-2020.09, 字节跳动 研发实习生</li>
-      <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, 维境视讯 图像算法实习生</li>
+      <li style="margin: 10px 0px 0px 0px" >2022.03-2022.06, 京东集团 算法实习生(搜索推荐算法)</li>
+      <li style="margin: 10px 0px 0px 0px" >2018.09-2020.09, 字节跳动 研发实习生(多媒体处理)</li>
+      <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, 维境视讯 算法实习生(图像处理)</li>
     </div>
 
     <div id="content-title" style="margin-top: 15px">
