update cv and education

--- a/index_ch.html
+++ b/index_ch.html
@@ -108,7 +108,9 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2022.07, 加入复旦大学担任博士后研究员。</li>
+      <li style="margin: -10px 0px 0px 5px" >2022.12, 获得上海市”超级博士后“激励计划资助。</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.07, 加入复旦大学担任博士后研究员。</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.07, 一篇关于语义压缩的论文被<strong>ACM MM 2022</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.06, 取得博士学位。</li>
       <li style="margin: 10px 0px 0px 5px" >2021.07, 一篇关于跨模态压缩的论文被<strong>ACM MM 2021</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2021.06, 一篇关于声纹识别对抗攻击的论文被<strong>ACM TOMM</strong>接收。</li>
@@ -130,7 +132,7 @@ var _hmt = _hmt || [];
     </div>
 
     <div id = "news-content">
-      <li style="margin: 10px 0px 0px 0px" >2022.07-至今, 莱陆科技 CTO</li>
+      <li style="margin: -10px 0px 0px 0px" >2022.07-至今, 莱陆科技 CTO</li>
       <li style="margin: 10px 0px 0px 0px" >2022.03-2022.06, 京东集团 算法实习生(搜索推荐算法)</li>
       <li style="margin: 10px 0px 0px 0px" >2018.09-2020.09, 字节跳动 研发实习生(多媒体处理)</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, 维境视讯 算法实习生(图像处理)</li>
@@ -272,7 +274,8 @@ var _hmt = _hmt || [];
       
       <h4>奖励荣誉</h4>
       <p style="margin-top: -10px">
-	<li style="margin: -10px 0px 0px 5px" >2017.10, 第17届中国虚拟现实大会最佳论文奖。</li>
+  <li style="margin: -10px 0px 0px 5px" >2022.12, 获得上海市“超级博士后”激励计划资助。</li>
+	<li style="margin: 10px 0px 0px 5px" >2017.10, 第17届中国虚拟现实大会最佳论文奖。</li>
 	<li style="margin: 10px 0px 0px 5px" >2017.12, 2017年AVS产业创新奖。</li>
   <li style="margin: 10px 0px 0px 5px" >2015.10, 国家奖学金。</li>
 
@@ -281,9 +284,11 @@ var _hmt = _hmt || [];
         <li style="margin: -10px 0px 0px 5px" >受邀担任以下期刊或会议的审稿人： 
 	  <ol style="margin: 0px 0px 0px 0px" >
             <li>IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT),</li>
-            <li>ICME 2022,</li>
-            <li>ICME 2021,</li>
-            <li>ICME 2020,</li>
+            <li>IEEE ICASSP 2023,</li>
+            <li>IEEE ICME 2023,</li>
+            <li>IEEE ICME 2022,</li>
+            <li>IEEE ICME 2021,</li>
+            <li>IEEE ICME 2020,</li>
           </ol>
 	</li>
       </p>
@@ -322,6 +327,9 @@ var _hmt = _hmt || [];
 <table width=90% border="0" align="center" id = "logo" style="margin-top: 10px;">
   <tbody>
     <tr>
+      <td align='center'>
+        <a href="http://www.lailotech.com"><img  src="img/logo.png" height="65px" /></a>
+      </td>
       <td align='center'>
         <a href="http://www.fudan.edu.cn"><img  src="img/fudan.jfif" height="65px" /></a>
       </td>
