--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2022.12, I achieve the “Super Post-doctor” funding of Shanghai.</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.02, one paper about "Cross-modality Compression" is accepted by <strong>IEEE TCSVT</strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.12, I achieve the “Super Post-doctor” funding of Shanghai.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, I join Fudan University as a post-doctor researcher.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, one paper on semantic based compression is accepted by <strong>ACM MM 2022</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, one paper on conceptual coding is accepted by <strong>ACM MM 2022</strong>.</li>
@@ -128,7 +129,7 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 20px 0px 0px" >2022.07-Now, CTO in <a href="https://lailotech.com/">Lailo Technology</a></li>
+      <!-- <li style="margin: -10px 20px 0px 0px" >2022.07-Now, CTO in <a href="https://lailotech.com/">Lailo Technology</a></li> -->
       <li style="margin: -10px 20px 0px 0px" >2022.03-2022.06, research intern on search&recommendation algorithm in JD.inc</li>
       <li style="margin: 10px 20px 0px 0px" >2018.09-2020.09, research intern on multimedia processing in Bytedance.Inc</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, part-time intern on image processing in VSCENE.</li>
@@ -140,7 +141,10 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
+
+      <li style="margin: -10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
+
+      <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Jia Chuanmin, Zhang Xinfeng, Ma Siwei, Gao Wen. Cross Modal Compression: Towards Human-comprehensible Semantic Compression[C]//Proceedings of the 29th ACM International Conference on Multimedia(ACM MM). 2021: 4230-4238. (Published, EI, CCF A, First Author)</li>
 
