--- a/index_ch.html
+++ b/index_ch.html
@@ -108,7 +108,8 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2022.12, 获得上海市”超级博士后“激励计划资助。</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.02, 一篇关于跨模态压缩的论文被<strong>IEEE TCSVT</strong>接收。</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.12, 获得上海市”超级博士后“激励计划资助。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, 加入复旦大学担任博士后研究员。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, 一篇关于语义压缩的论文被<strong>ACM MM 2022</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.06, 取得博士学位。</li>
@@ -132,7 +133,7 @@ var _hmt = _hmt || [];
     </div>
 
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >2022.07-至今, 莱陆科技 CTO</li>
+      <!-- <li style="margin: -10px 0px 0px 0px" >2022.07-至今, 莱陆科技 CTO</li> -->
       <li style="margin: 10px 0px 0px 0px" >2022.03-2022.06, 京东集团 算法实习生(搜索推荐算法)</li>
       <li style="margin: 10px 0px 0px 0px" >2018.09-2020.09, 字节跳动 研发实习生(多媒体处理)</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, 维境视讯 算法实习生(图像处理)</li>
@@ -144,7 +145,9 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
+      <li style="margin: -10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
+
+      <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Jia Chuanmin, Zhang Xinfeng, Ma Siwei, Gao Wen. Cross Modal Compression: Towards Human-comprehensible Semantic Compression[C]//Proceedings of the 29th ACM International Conference on Multimedia(ACM MM). 2021: 4230-4238. (Published, EI, CCF A, First Author)</li>
 
@@ -284,6 +287,7 @@ var _hmt = _hmt || [];
         <li style="margin: -10px 0px 0px 5px" >受邀担任以下期刊或会议的审稿人： 
 	  <ol style="margin: 0px 0px 0px 0px" >
             <li>IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT),</li>
+            <li>IEEE MM,</li>
             <li>IEEE ICASSP 2023,</li>
             <li>IEEE ICME 2023,</li>
             <li>IEEE ICME 2022,</li>
