update my research interests

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ var _hmt = _hmt || [];
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Jiguo Li's Homepage</title>
   <meta content="website" property="og:type">
-  <meta content="Jiguo Li is currently a post-doctor researcher of Fudan university. Before that, I earned my Ph.D. in Institute of Computing Technology, Chinese Academy of Science in 2022, under the supervision by Prof. Wen Gao and Prof. Siwei Ma. My research interests include environment detecting, dynamic decision-making and planning of the robot, image/video processing." property="og:description">
+  <meta content="Jiguo Li is currently a post-doctor researcher of Fudan university. Before that, I earned my Ph.D. in Institute of Computing Technology, Chinese Academy of Science in 2022, under the supervision by Prof. Wen Gao and Prof. Siwei Ma. My research interests include generative compression, speaker recognition, adversarial attack, virtual reality." property="og:description">
   <meta content="img/jiguo.png" property="og:image">
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 	        <a href="img/jiguo.png"><img src="img/jiguo.png" alt="Jiguo Li"></a>
 	      </div>
 	      <div class="author-name">Jiguo Li</div>
-	      <p>I received the B.E. degree from <a href="https://www.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2016. I earned the Ph.D. in <a href="http://www.ict.ac.cn/">Institute of Computing Technology, Chinese Academy of Science</a> in 2022, under the supervision by <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof. Wen Gao</a> and <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">Prof. Siwei Ma</a> . Now I am a post-doctor researcher in <a href="http://cmns.fudan.edu.cn/">Micro nano system center</a>, Fudan university. My co-supervisor is <a href="https://scholar.google.com/citations?user=E2rhFPIAAAAJ&hl=zh-CN">Prof. Lirong Zheng</a>. My research interests include perception and decision of robot, image generation, cross media analysis, and virtual reality.</p>
+	      <p>I received the B.E. degree from <a href="https://www.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2016. I earned the Ph.D. in <a href="http://www.ict.ac.cn/">Institute of Computing Technology, Chinese Academy of Science</a> in 2022, under the supervision by <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof. Wen Gao</a> and <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">Prof. Siwei Ma</a> . Now I am a post-doctor researcher in <a href="http://cmns.fudan.edu.cn/">Micro nano system center</a>, Fudan university. My co-supervisor is <a href="https://scholar.google.com/citations?user=E2rhFPIAAAAJ&hl=zh-CN">Prof. Lirong Zheng</a>. My research interests include generative compression, speaker recognition and adversarial attack, and virtual reality.</p>
 	      <br>
 	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">CV</a>] 
 	      [<a href="#news">News</a>]  
