--- a/index_ch.html
+++ b/index_ch.html
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 	        <a href="img/jiguo.png"><img src="img/jiguo.png" alt="Jiguo Li"></a>
 	      </div>
 	      <div class="author-name">黎吉国</div>
-	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 2016-2022年在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。2022年取得博士学位后加入复旦大学担任博士后研究员，合作导师为<a href="http://www.it.fudan.edu.cn/En/Data/View/1799">郑立荣</a>教授。我的研究方向为人工智能与多媒体，研究兴趣包括机器人感知与决策，图像生成, 跨媒体分析, 虚拟现实等。</p>
+	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 2016-2022年在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。2022年取得博士学位后加入复旦大学担任博士后研究员，合作导师为<a href="http://www.it.fudan.edu.cn/En/Data/View/1799">郑立荣</a>教授。我的研究方向为人工智能与多媒体，研究兴趣包括跨模态生成式编码, 声纹识别与对抗攻击, 虚拟现实等。</p>
 	      <br>
 	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">简历</a>] 
 	      [<a href="#news">新闻</a>]  
