--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ var _hmt = _hmt || [];
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Jiguo Li's Homepage</title>
   <meta content="website" property="og:type">
-  <meta content="Jiguo Li is currently a post-doctor researcher of Fudan university. Before that, I earned my Ph.D. in Institute of Computing Technology, Chinese Academy of Science in 2022, under the supervision by Prof. Wen Gao and Prof. Siwei Ma. My research interests include generative compression, speaker recognition, adversarial attack, virtual reality." property="og:description">
+  <meta content="I am currently a CV/NLP engineer in JD.com focusing on AIGC, including LLMs, image generation and multimodal generation. Before that, I am a post-doctor researcher of Fudan university from 2022 to 2023. I earned my Ph.D. in Institute of Computing Technology, Chinese Academy of Science in 2022, under the supervision by Prof. Wen Gao and Prof. Siwei Ma." property="og:description">
   <meta content="img/jiguo.png" property="og:image">
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 	        <a href="img/jiguo.png"><img src="img/jiguo.png" alt="Jiguo Li"></a>
 	      </div>
 	      <div class="author-name">Jiguo Li</div>
-	      <p>I received the B.E. degree from <a href="https://www.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2016. I earned the Ph.D. in <a href="http://www.ict.ac.cn/">Institute of Computing Technology, Chinese Academy of Science</a> in 2022, under the supervision by <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof. Wen Gao</a> and <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">Prof. Siwei Ma</a> . Now I am a post-doctor researcher in <a href="http://cmns.fudan.edu.cn/">Micro nano system center</a>, Fudan university. My co-supervisor is <a href="https://scholar.google.com/citations?user=E2rhFPIAAAAJ&hl=zh-CN">Prof. Lirong Zheng</a>. My research interests include generative compression, speaker recognition and adversarial attack, and virtual reality.</p>
+	      <p>I received the B.E. degree from <a href="https://www.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2016. I earned the Ph.D. in <a href="http://www.ict.ac.cn/">Institute of Computing Technology, Chinese Academy of Science</a> in 2022, under the supervision by <a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">Prof. Wen Gao</a> and <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">Prof. Siwei Ma</a> . From 2022 to 2023, I am a post-doctor researcher in <a href="http://cmns.fudan.edu.cn/">Micro nano system center</a>, Fudan university, with the  co-supervisor <a href="https://scholar.google.com/citations?user=E2rhFPIAAAAJ&hl=zh-CN">Prof. Lirong Zheng</a>. Now I am a CV/NLP engineer in JD.inc. My research interests focus on AIGC, including LLMs, image generation and multimodal generation.</p>
 	      <br>
 	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">CV</a>] 
 	      [<a href="#news">News</a>]  
@@ -66,10 +66,10 @@ var _hmt = _hmt || [];
       	<h3 class="contact-title"  style="margin-top: -15pt" >Contact me</h3>
       	<ul>
     			<font size="2" ><strong>Email:</strong></font>
-    			<font size="2">jgli AT fuda.edu.cn, jiguo.li AT vipl.ict.ac.cn</font>
+    			<font size="2">jgli AT fuda.edu.cn, jiguo_li AT qq.com</font>
         	<br>
         	<font size = "2"><strong>Adress:</strong> </font>
-          <font size="2">Room 601, Stainless steel building, No. 580, Changjiang Road, Shanghai</font>
+          <font size="2">Kechuang Economic Development Zone, eleven Street No. 18 Institute of Jingdong building, Tongzhou District, BeiJing</font>
     		</ul>
     	</section>
       <div style="text-align: center">
@@ -108,9 +108,12 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2023.02, one paper about "Cross-modality Compression" is accepted by <strong>IEEE TCSVT</strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.05, I join in JD.com as an engineer on AIGC, focusing on LLMs, image generation and multimodal.</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.04, one paper about "Conceptual Compression" is accepted by <strong>IJCV</strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.02, one paper about "Cross-modality Compression" is accepted by <strong>IEEE TCSVT</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.12, I achieve the “Super Post-doctor” funding of Shanghai.</li>
-      <li style="margin: 10px 0px 0px 5px" >2022.07, I join Fudan University as a post-doctor researcher.</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.07, I join in Lailo Tech as the technology leader.</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.07, I join in Fudan University as a post-doctor researcher.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, one paper on semantic based compression is accepted by <strong>ACM MM 2022</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, one paper on conceptual coding is accepted by <strong>ACM MM 2022</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.06, I earn my Ph.D. at UCAS.</li>
@@ -129,8 +132,9 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <!-- <li style="margin: -10px 20px 0px 0px" >2022.07-Now, CTO in <a href="https://lailotech.com/">Lailo Technology</a></li> -->
-      <li style="margin: -10px 20px 0px 0px" >2022.03-2022.06, research intern on search&recommendation algorithm in JD.inc</li>
+      <li style="margin: -10px 20px 0px 0px" >2023.05-Now, CV/NLP Engineer (focus on AIGC, including LLMs, SD and multimodal) in JD.Inc.</li>
+      <li style="margin: 10px 20px 0px 0px" >2022.07-2023.04, Technical director in <a href="https://lailotech.com/">Lailo Technology</a></li>
+      <li style="margin: 10px 20px 0px 0px" >2022.03-2022.06, research intern on search&recommendation algorithm in JD.inc</li>
       <li style="margin: 10px 20px 0px 0px" >2018.09-2020.09, research intern on multimedia processing in Bytedance.Inc</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, part-time intern on image processing in VSCENE.</li>
     </div>
@@ -142,7 +146,9 @@ var _hmt = _hmt || [];
     </div>
     <div id = "news-content">
 
-      <li style="margin: -10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
+      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, <strong>Li Jiguo</strong>, Wang Shanshe, Mao Qi, Jia Chuanmin, Ma Siwei, Gao Wen. Semantic-Aware Visual Decomposition for Image Coding. International Journal of Computer Vision(IJCV). (Published, IJCV, SCI, IF 11.369, CCF A)</li>
+
+      <li style="margin: 10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
 
       <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
 
