--- a/index_ch.html
+++ b/index_ch.html
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 	        <a href="img/jiguo.png"><img src="img/jiguo.png" alt="Jiguo Li"></a>
 	      </div>
 	      <div class="author-name">黎吉国</div>
-	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 2016-2022年在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。2022年取得博士学位后加入复旦大学担任博士后研究员，合作导师为<a href="http://www.it.fudan.edu.cn/En/Data/View/1799">郑立荣</a>教授。我的研究方向为人工智能与多媒体，研究兴趣包括跨模态生成式编码, 声纹识别与对抗攻击, 虚拟现实等。</p>
+	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 2016-2022年在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。2022年取得博士学位后加入复旦大学担任博士后研究员，合作导师为<a href="http://www.it.fudan.edu.cn/En/Data/View/1799">郑立荣</a>教授。随即获得“上海市超级博士后”激励计划资助。2023年加入京东集团，担任CV/NLP算法工程师。我的研究方向为AIGC相关前言技术及其落地应用，包括大语言模型，图像生成，多/跨模态生成等。</p>
 	      <br>
 	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">简历</a>] 
 	      [<a href="#news">新闻</a>]  
@@ -66,10 +66,10 @@ var _hmt = _hmt || [];
       	<h3 class="contact-title"  style="margin-top: -15pt" >联系方式</h3>
       	<ul>
     			<font size="2" ><strong>邮箱:</strong></font>
-    			<font size="2">jgli AT fudan.edu.cn, jgli AT lailotech.com</font>
+    			<font size="2">jgli AT fudan.edu.cn, jiguo_li AT qq.com</font>
         	<br>
         	<font size = "2"><strong>地址:</strong> </font>
-          <font size="2">上海市宝山区长江路580号不锈钢大厦601</font>
+          <font size="2">北京通州亦庄经济技术开发区科创十一街18号院京东集团总部2号楼</font>
     		</ul>
     	</section>
       <div style="text-align: center">
@@ -108,11 +108,15 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2023.02, 一篇关于跨模态压缩的论文被<strong>IEEE TCSVT</strong>接收。</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.05, 加入京东集团，担任CV/NLP算法工程师，主要关注AIGC相关技术和应用，包括大语言模型、图像生成、多模态等。</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.04, 一篇关于跨模态生成和压缩的论文被<strong>IJCV</strong>接收。</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.02, 一篇关于跨模态生成和压缩的论文被<strong>IEEE TCSVT</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.12, 获得上海市”超级博士后“激励计划资助。</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.07, 加入莱陆科技担任技术总监。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, 加入复旦大学担任博士后研究员。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.07, 一篇关于语义压缩的论文被<strong>ACM MM 2022</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2022.06, 取得博士学位。</li>
+      <li style="margin: 10px 0px 0px 5px" >2022.03, 进入京东集团实习。</li>
       <li style="margin: 10px 0px 0px 5px" >2021.07, 一篇关于跨模态压缩的论文被<strong>ACM MM 2021</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2021.06, 一篇关于声纹识别对抗攻击的论文被<strong>ACM TOMM</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2020.11, 完成博士开题答辩。</li>
@@ -133,7 +137,8 @@ var _hmt = _hmt || [];
     </div>
 
     <div id = "news-content">
-      <!-- <li style="margin: -10px 0px 0px 0px" >2022.07-至今, 莱陆科技 CTO</li> -->
+      <li style="margin: -10px 0px 0px 0px" >2023.05-至今, 京东集团 CV/NLP算法工程师(AIGC方向)</li>
+      <li style="margin: 10px 0px 0px 0px" >2022.07-2023.04, 莱陆科技 技术总监</li>
       <li style="margin: 10px 0px 0px 0px" >2022.03-2022.06, 京东集团 算法实习生(搜索推荐算法)</li>
       <li style="margin: 10px 0px 0px 0px" >2018.09-2020.09, 字节跳动 研发实习生(多媒体处理)</li>
       <li style="margin: 10px 0px 0px 0px" >2016.09-2018.09, 维境视讯 算法实习生(图像处理)</li>
@@ -145,7 +150,9 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
+      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, <strong>Li Jiguo</strong>, Wang Shanshe, Mao Qi, Jia Chuanmin, Ma Siwei, Gao Wen. Semantic-Aware Visual Decomposition for Image Coding. International Journal of Computer Vision(IJCV). (Published, IJCV, SCI, IF 11.369, CCF A)</li>
+
+      <li style="margin: 10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
 
       <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
 
@@ -281,6 +288,9 @@ var _hmt = _hmt || [];
 	<li style="margin: 10px 0px 0px 5px" >2017.10, 第17届中国虚拟现实大会最佳论文奖。</li>
 	<li style="margin: 10px 0px 0px 5px" >2017.12, 2017年AVS产业创新奖。</li>
   <li style="margin: 10px 0px 0px 5px" >2015.10, 国家奖学金。</li>
+  <li style="margin: 10px 0px 0px 5px" >2014.10, 国家励志奖学金。</li>
+  <li style="margin: 10px 0px 0px 5px" >2013.10, C语言课程设计大赛一等奖。</li>
+  <li style="margin: 10px 0px 0px 5px" >2013.08, 全国大学生智能汽车竞赛华南赛区一等奖。</li>
 
 
       <h4>社会服务</h4>
