update the news

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2023.08, Two innovation patents are granted.</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.08, A paper about "Cross-modality compression" is accepted by IEEE TMM.</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.08, Two innovation patents are granted.</li>
       <li style="margin: 10px 0px 0px 5px" >2023.05, I join in JD.com as an engineer on AIGC, focusing on LLMs, image generation and multimodal.</li>
       <li style="margin: 10px 0px 0px 5px" >2023.04, one paper about "Conceptual Compression" is accepted by <strong>IJCV</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2023.02, one paper about "Cross-modality Compression" is accepted by <strong>IEEE TCSVT</strong>.</li>
@@ -146,8 +147,9 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
+      <li style="margin: -10px 0px 0px 0px" >Gao Junlong, <strong>Li Jiguo</strong>, Jia Chuanmin, Ma Siwei, Gao Wen. Cross Modal Compression with Variable Rate Prompt[J]. IEEE Transactions on Multimedia(TMM). (Accepted, TMM, SCI, IF 8.182, CCF B)</li>
 
-      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, <strong>Li Jiguo</strong>, Wang Shanshe, Mao Qi, Jia Chuanmin, Ma Siwei, Gao Wen. Semantic-Aware Visual Decomposition for Image Coding. International Journal of Computer Vision(IJCV). (Published, IJCV, SCI, IF 11.369, CCF A)</li>
+      <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, <strong>Li Jiguo</strong>, Wang Shanshe, Mao Qi, Jia Chuanmin, Ma Siwei, Gao Wen. Semantic-Aware Visual Decomposition for Image Coding. International Journal of Computer Vision(IJCV). (Published, IJCV, SCI, IF 11.369, CCF A)</li>
 
       <li style="margin: 10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
 
