--- a/index_ch.html
+++ b/index_ch.html
@@ -108,7 +108,8 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2023.08, 两项专利获得授权。分别为“基于语音的图像生成方法、装置和电子设备”和“一种系统延时确定方法、装置、设备和存储介质”。</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.08, 一篇关于跨模态压缩的论文被<strong>IEEE TMM</strong>接收。</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.08, 两项专利获得授权。分别为“基于语音的图像生成方法、装置和电子设备”和“一种系统延时确定方法、装置、设备和存储介质”。</li>
       <li style="margin: 10px 0px 0px 5px" >2023.05, 加入京东集团，担任CV/NLP算法工程师，主要关注AIGC相关技术和应用，包括大语言模型、图像生成、多模态等。</li>
       <li style="margin: 10px 0px 0px 5px" >2023.04, 一篇关于跨模态生成和压缩的论文被<strong>IJCV</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2023.02, 一篇关于跨模态生成和压缩的论文被<strong>IEEE TCSVT</strong>接收。</li>
@@ -150,7 +151,9 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, <strong>Li Jiguo</strong>, Wang Shanshe, Mao Qi, Jia Chuanmin, Ma Siwei, Gao Wen. Semantic-Aware Visual Decomposition for Image Coding. International Journal of Computer Vision(IJCV). (Published, IJCV, SCI, IF 11.369, CCF A)</li>
+      <li style="margin: -10px 0px 0px 0px" >Gao Junlong, <strong>Li Jiguo</strong>, Jia Chuanmin, Ma Siwei, Gao Wen. Cross Modal Compression with Variable Rate Prompt[J]. IEEE Transactions on Multimedia(TMM). (Accepted, TMM, SCI, IF 8.182, CCF B)</li>
+
+      <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, <strong>Li Jiguo</strong>, Wang Shanshe, Mao Qi, Jia Chuanmin, Ma Siwei, Gao Wen. Semantic-Aware Visual Decomposition for Image Coding. International Journal of Computer Vision(IJCV). (Published, IJCV, SCI, IF 11.369, CCF A)</li>
 
       <li style="margin: 10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
 
@@ -176,7 +179,7 @@ var _hmt = _hmt || [];
     </div>
 
     <div id = "news-content">
-      <li style="margin: 10px 0px 0px 0px" ><strong>黎吉国</strong>, 许继征, 马思伟, 王悦. 基于语音的图像生成方法、装置和电子设备. 公开号: 201910042614.9 (公开, <a href="http://www.soopat.com/Patent/201910042614">link</a>)</li>
+      <li style="margin: 10px 0px 0px 0px" ><strong>黎吉国</strong>, 许继征, 马思伟, 王悦. 基于语音的图像生成方法、装置和电子设备. 公开号: 201910042614.9 (授权, <a href="http://www.soopat.com/Patent/201910042614">link</a>)</li>
 
       <li style="margin: 10px 0px 0px 0px" >马思伟, <strong>黎吉国</strong>, 贾川民, 赵政辉, 王苫社. 数据压缩的方法、装置、设备及存储介质. 公开号: 202010604773.6 (公开, <a href="http://www.soopat.com/Patent/202010604773">link</a>)</li>
 
@@ -184,7 +187,7 @@ var _hmt = _hmt || [];
 
       <li style="margin: 10px 0px 0px 0px" >王悦, 姜晓龙, 魏建超, <strong>黎吉国</strong>, 孟德国, 刘鑫. 一种全景视频处理制作系统及方法. 公开号: 201711100069.1 (公开, <a href="http://www.soopat.com/Patent/201711100069">link</a>)</li>
 
-      <li style="margin: 10px 0px 0px 0px" >施澍, <strong>黎吉国</strong>, 张莉, 马思伟, 王悦. 一种系统延时确定方法、装置、设备和存储介质. 公开号: 202110172567.7 (公开, <a href="http://www.soopat.com/Patent/202110172567">link</a>)</li>
+      <li style="margin: 10px 0px 0px 0px" >施澍, <strong>黎吉国</strong>, 张莉, 马思伟, 王悦. 一种系统延时确定方法、装置、设备和存储介质. 公开号: 202110172567.7 (授权, <a href="http://www.soopat.com/Patent/202110172567">link</a>)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>黎吉国</strong>, 许继征, 张莉, 王悦, 马思伟. 声音识别方法、装置以及存储指令的计算机可读存储介质. 公开号: 202010694750.9 (公开, <a href="http://www.soopat.com/Patent/202010694750">link</a>)</li>
       
