--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2023.08, A paper about "Cross-modality compression" is accepted by IEEE TMM.</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.11, I join in <strong>MeiTuan</strong> as a senior engineer on LLM Applications.</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.11, We win <strong>the 2nd class prize</strong> in The first National Digital Health Innovation Application Competition on Medcial AI Track (<a href="http://www.nhc.gov.cn/cms-search/xxgk/getManuscriptXxgk.htm?id=528416d9c21342df850d8a3386291914">link</a> ).</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.08, A paper about "Cross-modality compression" is accepted by <strong> IEEE TMM</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2023.08, Two innovation patents are granted.</li>
-      <li style="margin: 10px 0px 0px 5px" >2023.05, I join in JD.com as an engineer on AIGC, focusing on LLMs, image generation and multimodal.</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.05, I join in <strong>JD</strong> as an engineer on AIGC, focusing on LLMs, image generation and multimodal.</li>
       <li style="margin: 10px 0px 0px 5px" >2023.04, one paper about "Conceptual Compression" is accepted by <strong>IJCV</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2023.02, one paper about "Cross-modality Compression" is accepted by <strong>IEEE TCSVT</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" >2022.12, I achieve the “Super Post-doctor” funding of Shanghai.</li>
@@ -134,7 +136,8 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 20px 0px 0px" >2023.05-Now, CV/NLP Engineer (focus on AIGC, including LLMs, SD and multimodal) in JD.Inc.</li>
+      <li style="margin: -10px 20px 0px 0px" >2023.11-now, Seninor CV/NLP Engineer (focus on LLM Applications) in MeiTuan.</li>
+      <li style="margin: 10px 20px 0px 0px" >2023.05-2023.11, CV/NLP Engineer (focus on AIGC, including LLMs, SD and multimodal) in JD.Inc.</li>
       <li style="margin: 10px 20px 0px 0px" >2022.07-2023.04, Technical director in <a href="https://lailotech.com/">Lailo Technology</a></li>
       <li style="margin: 10px 20px 0px 0px" >2022.03-2022.06, research intern on search&recommendation algorithm in JD.inc</li>
       <li style="margin: 10px 20px 0px 0px" >2018.09-2020.09, research intern on multimedia processing in Bytedance.Inc</li>
