--- a/index_ch.html
+++ b/index_ch.html
@@ -108,7 +108,9 @@ var _hmt = _hmt || [];
     </div>
     
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 5px" >2023.08, 一篇关于跨模态压缩的论文被<strong>IEEE TMM</strong>接收。</li>
+      <li style="margin: -10px 0px 0px 5px" >2023.11, 加入美团点评担任高级算法工程师，主要关注大语言模型相关技术及其应用。</li>
+      <li style="margin: 10px 0px 0px 5px" >2023.11, 获得第一届全国数字健康创新应用大赛医学人工智能主题赛二等奖。(<a href="http://www.nhc.gov.cn/cms-search/xxgk/getManuscriptXxgk.htm?id=528416d9c21342df850d8a3386291914">公示链接</a></li>
+      <li style="margin: 10px 0px 0px 5px" >2023.08, 一篇关于跨模态压缩的论文被<strong>IEEE TMM</strong>接收。</li>
       <li style="margin: 10px 0px 0px 5px" >2023.08, 两项专利获得授权。分别为“基于语音的图像生成方法、装置和电子设备”和“一种系统延时确定方法、装置、设备和存储介质”。</li>
       <li style="margin: 10px 0px 0px 5px" >2023.05, 加入京东集团，担任CV/NLP算法工程师，主要关注AIGC相关技术和应用，包括大语言模型、图像生成、多模态等。</li>
       <li style="margin: 10px 0px 0px 5px" >2023.04, 一篇关于跨模态生成和压缩的论文被<strong>IJCV</strong>接收。</li>
@@ -138,7 +140,8 @@ var _hmt = _hmt || [];
     </div>
 
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >2023.05-至今, 京东集团 CV/NLP算法工程师(AIGC方向)</li>
+      <li style="margin: -10px 0px 0px 0px" >2023.11-至今, 美团点评 高级算法工程师</li>
+      <li style="margin: 10px 0px 0px 0px" >2023.05-2023.11, 京东集团 CV/NLP算法工程师(AIGC方向)</li>
       <li style="margin: 10px 0px 0px 0px" >2022.07-2023.04, 莱陆科技 技术总监</li>
       <li style="margin: 10px 0px 0px 0px" >2022.03-2022.06, 京东集团 算法实习生(搜索推荐算法)</li>
       <li style="margin: 10px 0px 0px 0px" >2018.09-2020.09, 字节跳动 研发实习生(多媒体处理)</li>
